--- a/www/templates/listdetail.html
+++ b/www/templates/listdetail.html
@@ -1,4 +1,4 @@
-<ion-view view-title="ประวัติส่วนตัว" ng-init="init()" cache-view="false" align-title="center">
+<ion-view view-title="ประวัติส่วนตัว" ng-init="initProfile()" cache-view="false" align-title="center">
 
     <!--<ion-nav-bar align-title="center">
         <ion-nav-buttons side="left">
