--- a/www/templates/liststock.html
+++ b/www/templates/liststock.html
@@ -1,6 +1,6 @@
-<ion-view view-title="คลังสินค้า" ng-init="init()">
+<ion-view view-title="คลังสินค้า" ng-init="initStock()">
     <ion-content>
-        <ion-refresher pulling-text="Pull to refresh..." on-refresh="doRefresh()">
+        <ion-refresher pulling-text="Pull to refresh..." on-refresh="doRefreshInitStock()">
         </ion-refresher>
 
         <div class="input-group input-group-sm">
