--- a/www/templates/me-detail.html
+++ b/www/templates/me-detail.html
@@ -1,4 +1,4 @@
-<ion-view ng-init="setItem()" view-title="รายละเอียด" cache-view="false">
+<ion-view view-title="รายละเอียด">
     <ion-content>
         <div class="list">
             <label class="item item-input">
