--- a/www/templates/tab-me.html
+++ b/www/templates/tab-me.html
@@ -2,15 +2,16 @@
   <ion-content>
     <ion-refresher pulling-text="Pull to refresh..." on-refresh="doRefresh()">
     </ion-refresher>
-    
+
     <div class="input-group input-group-sm">
-              <span class="input-group-addon" id="sizing-addon3"><i class="fa fa-search" aria-hidden="true"></i></span>
-              <input type="text" class="form-control" placeholder="ค้นหา..." ng-model="topsearch" aria-describedby="sizing-addon3">
+      <span class="input-group-addon" id="sizing-addon3"><i class="fa fa-search" aria-hidden="true"></i></span>
+      <input type="text" class="form-control" placeholder="ค้นหา... (อย่างน้อย 5 ตัวอักษร)" ng-model="topsearch" aria-describedby="sizing-addon3" ng-change="filter(topsearch, ordersApt,limitTo)">
     </div>
-    
+
     <ion-list>
 
-      <ion-item class='item item-avatar-left item-icon-right' ng-repeat="data in ordersApt | filter:topsearch" ng-click = "btnGo2(data)">
+      <ion-item class='item item-avatar-left item-icon-right' ng-repeat="data in ordersApt| limitTo: limitTo | filter:filterText "
+        ng-click="btnGo2(data)">
         <img src={{data.user.profileImageURL}}>
         <h2>{{data.user.displayName}}</h2>
         <p style="margin-right: 20%">{{data.shipping.address}} {{data.shipping.subdistrict}}</p>
@@ -21,5 +22,13 @@
         <ion-option-button class="button-positive" ng-click="completeDeliver(data)">สำเร็จ</ion-option-button>
       </ion-item>
     </ion-list>
+    <div ng-if="showInfiniteMe">
+      <div class="text-center">
+        <ion-spinner icon="spiral"></ion-spinner>
+        <p ng-if="ordersApt.length > 0">มีอีก {{leftMoreMe}}</p>
+      </div>
+      <ion-infinite-scroll on-infinite="loadMoreNew(orders,'me')">
+      </ion-infinite-scroll>
+    </div>
   </ion-content>
 </ion-view>
