--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -7,15 +7,13 @@ navigation history that also transitions its views in and out.
 <ion-tabs class="tabs-icon-top tabs-color-active-positive">
 
   <!-- Dashboard Tab -->
-  <div ng-controller="NewCtrl">
-
-    <ion-tab title="งานใหม่" badge="countOrder" icon-off="ion-ios-paper" icon-on="ion-ios-paper-outline"
-      href="#/app/tab/new">
+  <div>
+    <ion-tab title="งานใหม่" badge="countOrder" icon-off="ion-ios-paper" icon-on="ion-ios-paper-outline" href="#/app/tab/new">
       <ion-nav-view name="tab-new"></ion-nav-view>
     </ion-tab>
   </div>
   <!-- Me Tab -->
-  <div ng-controller="NewCtrl">
+  <div>
     <ion-tab title="ของฉัน" badge="countOrderApt" icon-off="ion-ios-compose-outline" icon-on="ion-ios-compose" href="#/app/tab/me">
       <ion-nav-view name="tab-me"></ion-nav-view>
     </ion-tab>
@@ -29,7 +27,7 @@ navigation history that also transitions its views in and out.
   </div>
 
   <!-- chat -->
-  <div ng-controller="ChatCtrl">
+  <div>
     <ion-tab title="สนทนา" icon-off="ion-ios-chatbubble-outline" icon-on="ion-ios-chatbubble" href="#/app/tab/chat">
       <ion-nav-view name="tab-chat"></ion-nav-view>
     </ion-tab>
