--- a/www/templates/listAr.html
+++ b/www/templates/listAr.html
@@ -1,4 +1,4 @@
-<ion-view view-title="รายการใบแจ้งหนี้" ng-init="init()">
+<ion-view view-title="รายการใบแจ้งหนี้" ng-init="initAr()">
     <!--<ion-nav-bar align-title="center">
         <ion-nav-buttons side="left">
             <button class="button button-icon icon-left" ui-sref="tab.more">Back
@@ -7,7 +7,7 @@
 
     </ion-nav-bar>-->
     <ion-content>
-        <ion-refresher pulling-text="Pull to refresh..." on-refresh="doRefresh()">
+        <ion-refresher pulling-text="Pull to refresh..." on-refresh="doRefreshInitAr()">
         </ion-refresher>
 
         <div class="row badge-buttonnoti">
