--- a/www/templates/new-detail.html
+++ b/www/templates/new-detail.html
@@ -1,4 +1,4 @@
-<ion-view view-title="รายละเอียด" ng-init="setItem()" cache-view="false">
+<ion-view view-title="รายละเอียด">
     <ion-content>
         <div class="list">
 
