--- a/www/templates/listdetail.html
+++ b/www/templates/listdetail.html
@@ -79,6 +79,9 @@
                     <div class="col">
                         <button class="button button-balanced button-block" ng-click="updateProfileDeli(userStore);updateDeliver = false">อัพเดตโปรไฟล์</button>
                     </div>
+                    <div class="col">
+                        <button class="button button-assertive button-block" ng-click="CancelUpdate();updateDeliver = false">ยกเลิก</button>
+                    </div>
                 </div>
 
             </div>
