--- a/www/templates/listAr.html
+++ b/www/templates/listAr.html
@@ -1,4 +1,4 @@
-<ion-view view-title="รายการใบแจ้งหนี้" ng-init="initAr()">
+<ion-view view-title="รายการใบแจ้งหนี้" ng-init="initAr()" cache-view="false">
     <!--<ion-nav-bar align-title="center">
         <ion-nav-buttons side="left">
             <button class="button button-icon icon-left" ui-sref="tab.more">Back
