--- a/www/templates/listreceived.html
+++ b/www/templates/listreceived.html
@@ -1,4 +1,4 @@
-<ion-view view-title="รายการรับข้าว" ng-init="initListReceived()">
+<ion-view view-title="รายการรับข้าว" ng-init="initListReceived()" cache-view="false">
     <!--<ion-nav-bar align-title="center">
         <ion-nav-buttons side="left">
             <button class="button button-icon icon-left" ui-sref="tab.more">Back
