--- a/www/templates/listReturn.html
+++ b/www/templates/listReturn.html
@@ -1,4 +1,4 @@
-<ion-view view-title="รายการใบแจ้งคืน" ng-init="initReturn()">
+<ion-view view-title="รายการใบแจ้งคืน" ng-init="initReturn()" cache-view="false">
     <!--<ion-nav-bar align-title="center">
         <ion-nav-buttons side="left">
             <button class="button button-icon icon-left" ui-sref="tab.more">Back
