--- a/www/templates/listbl.html
+++ b/www/templates/listbl.html
@@ -2,15 +2,17 @@
     <ion-nav-buttons side="right">
         <button class="button button-positive button-clear" ng-click="modal.show()">สร้างบิลลอย</button>
     </ion-nav-buttons>
-    
+
     <ion-content>
         <ion-refresher pulling-text="Pull to refresh..." on-refresh="doRefreshInitBl()"></ion-refresher>
         <div class="input-group input-group-sm">
             <span class="input-group-addon" id="sizing-addon3"><i class="fa fa-search" aria-hidden="true"></i></span>
-            <input type="text" class="form-control" placeholder="ค้นหา..." ng-model="topsearch" aria-describedby="sizing-addon3">
+            <input type="text" class="form-control" style="width: 100% !important;" placeholder="ค้นหา... (อย่างน้อย 5 ตัวอักษร)" ng-model="topsearch" ng-change="filter(topsearch, OrdersCpt,limitTo)"
+                aria-describedby="sizing-addon3">
         </div>
         <ion-list>
-            <ion-item class='item item-avatar-left item-icon-right' ng-repeat="data in OrdersCpt | filter:topsearch" ng-click="goDetail(data)">
+            <ion-item class='item item-avatar-left item-icon-right' ng-repeat="data in OrdersCpt | filter:filterText | limitTo: limitTo"
+                ng-click="goDetail(data)">
                 <img src={{data.user.profileImageURL}}>
                 <h2>{{data.user.displayName}}</h2>
                 <p class="dataMargin">{{data.shipping.address}} {{data.shipping.subdistrict}}</p>
@@ -26,6 +28,14 @@
                 <ion-option-button class="button-positive" ng-click="acceptDeliver(data)">ยอมรับ</ion-option-button>-->
             </ion-item>
         </ion-list>
+        <div ng-if="showInfiniteBl">
+            <div class="text-center">
+                <ion-spinner icon="spiral"></ion-spinner>
+                <p ng-if="orders.length > 0">มีอีก {{leftMoreBl}}</p>
+            </div>
+            <ion-infinite-scroll on-infinite="loadMoreBl(OrdersCpt)">
+            </ion-infinite-scroll>
+        </div>
     </ion-content>
 
     <script id="templates/modal.html" type="text/ng-template">
