--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -6,7 +6,7 @@
             <ion-nav-buttons side="left">
                 <div>
                     <button class="button button-icon ion-navicon" menu-toggle="left">
-                        <span class="badge badge-assertive badge-notify-{{Platform | lowercase}}">{{countAllBadge}}</span>
+                        <span ng-if="countAllBadge > 0" class="badge badge-assertive badge-notify-{{Platform | lowercase}}">{{countAllBadge}}</span>
                         </button>
                 </div>
             </ion-nav-buttons>
@@ -41,11 +41,11 @@
                     </a>
                     <a class="item item-icon-left settings-option" menu-close ng-click="listReturn()">
                         <i class="icon icon ion-ios-list-outline"></i> รายการใบแจ้งคืน
-                        <span class="badge badge-assertive">{{countlistReturned || 0}}</span>
+                        <span ng-if="countlistReturned > 0" class="badge badge-assertive">{{countlistReturned || 0}}</span>
                     </a>
                     <a class="item item-icon-left settings-option" menu-close ng-click="listAr()">
                         <i class="icon icon ion-ios-list-outline"></i> รายการใบแจ้งหนี้
-                        <span class="badge badge-assertive">{{countlistAr || 0}}</span>
+                        <span ng-if="countlistAr > 0" class="badge badge-assertive">{{countlistAr || 0}}</span>
                     </a>
                     <!--<a class="item item-icon-left settings-option" menu-close ng-click="listdetail()">
                         <i class="icon ion-ios-contact-outline"></i> ประวัติส่วนตัว
