--- a/www/templates/tab-me.html
+++ b/www/templates/tab-me.html
@@ -5,12 +5,12 @@
 
     <div class="input-group input-group-sm">
       <span class="input-group-addon" id="sizing-addon3"><i class="fa fa-search" aria-hidden="true"></i></span>
-      <input type="text" class="form-control" placeholder="ค้นหา... (อย่างน้อย 5 ตัวอักษร)" ng-model="topsearch" aria-describedby="sizing-addon3" ng-change="filter(topsearch, ordersApt,limitTo)">
+      <input type="text" style="width: 100% !important;" class="form-control" placeholder="ค้นหา... (อย่างน้อย 5 ตัวอักษร)" ng-model="topsearch" aria-describedby="sizing-addon3" ng-change="filter(topsearch, ordersApt,limitTo)">
     </div>
 
     <ion-list>
 
-      <ion-item class='item item-avatar-left item-icon-right' ng-repeat="data in ordersApt| limitTo: limitTo | filter:filterText "
+      <ion-item class='item item-avatar-left item-icon-right' ng-repeat="data in ordersApt | filter:filterText | limitTo: limitTo"
         ng-click="btnGo2(data)">
         <img src={{data.user.profileImageURL}}>
         <h2>{{data.user.displayName}}</h2>
