--- a/www/templates/tab-new.html
+++ b/www/templates/tab-new.html
@@ -5,11 +5,11 @@
 
     <div class="input-group input-group-sm">
       <span class="input-group-addon" id="sizing-addon3"><i class="fa fa-search" aria-hidden="true"></i></span>
-      <input type="text" class="form-control" placeholder="ค้นหา... (อย่างน้อย 5 ตัวอักษร)" ng-model="topsearch" ng-change="filter(topsearch, orders,limitTo)"
+      <input type="text" style="width: 100% !important;" class="form-control" placeholder="ค้นหา... (อย่างน้อย 5 ตัวอักษร)" ng-model="topsearch" ng-change="filter(topsearch, orders,limitTo)"
         aria-describedby="sizing-addon3">
     </div>
     <ion-list>
-      <ion-item class='item item-avatar-left item-icon-right' ng-repeat="data in orders | limitTo: limitTo | filter:filterText | orderBy: '-created'"
+      <ion-item class='item item-avatar-left item-icon-right' ng-repeat="data in orders | filter:filterText | orderBy: '-created' | limitTo: limitTo"
         ng-click="btnGo(data)">
         <img src={{data.user.profileImageURL}}>
         <h2>{{data.user.displayName}}</h2>
