--- a/www/templates/listbl.html
+++ b/www/templates/listbl.html
@@ -7,7 +7,7 @@
         <ion-refresher pulling-text="Pull to refresh..." on-refresh="doRefreshInitBl()"></ion-refresher>
         <div class="input-group input-group-sm">
             <span class="input-group-addon" id="sizing-addon3"><i class="fa fa-search" aria-hidden="true"></i></span>
-            <input type="text" class="form-control" style="width: 100% !important;" placeholder="ค้นหา... (อย่างน้อย 5 ตัวอักษร)" ng-model="topsearch" ng-change="filter(topsearch, OrdersCpt,limitTo)"
+            <input type="text" class="form-control width-100" placeholder="ค้นหา... (อย่างน้อย 5 ตัวอักษร)" ng-model="topsearch" ng-change="filter(topsearch, OrdersCpt,limitTo)"
                 aria-describedby="sizing-addon3">
         </div>
         <ion-list>
