--- a/www/templates/me-detail.html
+++ b/www/templates/me-detail.html
@@ -14,7 +14,7 @@
 
             <div class="row" ng-click="btnGoDetail(data)">
                 <div class="col col-33">
-                    <img class="imagempf" src={{data.user.profileImageURL}}>
+                    <img class="imagempf" src="{{data.user.profileImageURL}}">
                 </div>
                 <div class="col col-66">
                     <h4>ชื่อ : {{data.user.displayName}}</h4>
@@ -22,58 +22,48 @@
                     <p>{{data.shipping.district}} {{data.shipping.province}} {{data.shipping.postcode}}</p>
                 </div>
             </div>
-            <div class="row">
-                <div class="col">
+            <div class="row text-center">
+                <!--<div class="col">
                     <a class="item item-icon-left tapbuttonNone" ng-click="gotoChat2(data.user)">
                         <i class="icon ion-ios-chatbubble"></i> พูดคุย
                     </a>
-                </div>
+                </div>-->
                 <div class="col">
-                    <a ng-click="telephone('{{data.shipping.tel}}')" class="item item-icon-left tapbuttonNone">
+                    <a class="item item-icon-left tapbuttonNone" ng-click="telephone('{{data.shipping.tel}}')">
                         <i class="icon ion-ios-telephone"></i> โทร
                     </a>
                 </div>
                 <div class="col">
-                    <!--<a ui-sref="app.tab.map({point:data._id})" class="item item-icon-left">
-                        <i class="icon ion-ios-location"></i> นำทาง
-                    </a>-->
-                     <a ng-click="openMap({{data}})" class="item item-icon-left tapbuttonNone">
+                     <a class="item item-icon-left tapbuttonNone" ng-click="openMap({{data}})">
                         <i class="icon ion-ios-location"></i> นำทาง
                     </a>
                 </div>
             </div>
 
-            <!---->
-            <!--<label class="item item-input" ng-click="btnGoDetail(data)">
-                <span class="input-label">ชื่อ : </span>
-                <input ng-model="data.user.displayName" type="text" style="background-color: white" readonly>
-            </label>
-
-            <label class="item item-input item-text-wrap">
-                <span class="input-label ">ที่อยู่ : </span>
-                <label type="text" style="background-color: white;padding-right: 2cm;color:black" readonly>{{data.shipping.address +''+data.shipping.subdistrict+''+data.shipping.district+''+data.shipping.province+''+data.shipping.postcode}}
-                    </label>
-            </label>
-
-            <label class="item item-input">
-                <span class="input-label">เบอร์โทร : </span>
-                <input ng-model="data.shipping.tel" type="text" style="background-color: white" readonly>
-            </label>
-            <div>
-                <button class="button button-block button-outline button-positive icon-left ion-ios-location" ui-sref="app.tab.map({point:data._id})">
-                                ค้นหาเส้นทาง
-                </button>
-            </div>-->
-            <div class="row">
-                <div class="col"></div>
-                <div class="col col-90">
+            <div class="row" ng-show="data.deliverystatus == 'accept'">
+                <div class="col col-50">
                     <button class="button button-block button-positive" ng-click="completeDeliver(data)">
                             ส่งแล้ว
-                        </button>
+                    </button>
                 </div>
-                <div class="col"></div>
+                <div class="col col-50">
+                    <button class="button button-block button-assertive" ng-click="rejectDeliver(data)">
+                            คืนงาน
+                    </button>
+                </div>
             </div>
-
+            <div class="row" ng-show="data.deliverystatus == 'wait deliver'">
+                <div class="col col-50">
+                     <button class="button button-block button-positive" ng-click="acceptDeliver(data)">
+                            ยอมรับ
+                    </button>
+                </div>
+                <div class="col col-50">
+                    <button class="button button-block button-assertive" ng-click="rejectDeliver(data)">
+                            คืนงาน
+                    </button>
+                </div>
+            </div>
             <div class="item item-avatar-left item-icon-right item-text-wrap" ng-repeat="item in data.items">
                 <img src="{{item.product.images}}">
                 <h2>{{item.product.name}} ({{item.product.price}} บาท)</h2>
@@ -102,5 +92,5 @@
                 <input ng-value="data.totalamount + ' ' + 'บาท'" type="text" style="background-color: white" readonly>
             </label>
         </div>
-    </ion-content>
+    </div></ion-content>
 </ion-view>
