--- a/www/templates/tab-new.html
+++ b/www/templates/tab-new.html
@@ -1,17 +1,15 @@
-<ion-view view-title="งานใหม่" ng-init="init()" cache-view="false">
+<ion-view ng-init="init()" view-title="งานใหม่" cache-view="false">
   <ion-content>
     <ion-refresher pulling-text="Pull to refresh..." on-refresh="doRefresh()">
     </ion-refresher>
 
     <div class="input-group input-group-sm">
       <span class="input-group-addon" id="sizing-addon3"><i class="fa fa-search" aria-hidden="true"></i></span>
-      <input type="text" style="width: 100% !important;" class="form-control" placeholder="ค้นหา... (อย่างน้อย 5 ตัวอักษร)" ng-model="topsearch" ng-change="filter(topsearch, orders,limitTo)"
-        aria-describedby="sizing-addon3">
+      <input class="form-control width-100" ng-change="filter(topsearch, orders,limitTo)" ng-model="topsearch" type="text" aria-describedby="sizing-addon3" placeholder="ค้นหา... (อย่างน้อย 5 ตัวอักษร)">
     </div>
     <ion-list>
-      <ion-item class='item item-avatar-left item-icon-right' ng-repeat="data in orders | filter:filterText | orderBy: '-created' | limitTo: limitTo"
-        ng-click="btnGo(data)">
-        <img src={{data.user.profileImageURL}}>
+      <ion-item class="item item-avatar-left item-icon-right" ng-click="btnGo(data)" ng-repeat="data in orders | filter:filterText | orderBy: '-created' | limitTo: limitTo">
+        <img src="{{data.user.profileImageURL}}">
         <h2>{{data.user.displayName}}</h2>
         <p style="margin-right: 20%">{{data.shipping.address}} {{data.shipping.subdistrict}}</p>
         <p style="margin-right: 20%">{{data.shipping.district}} {{data.shipping.province}} {{data.shipping.postcode}}</p>
@@ -19,7 +17,7 @@
         <p class="icon ion-right clock  ion-clock" am-time-ago="data.created"></p>
         <p class="icon ion-right amount">{{data.totalamount | number:0}} ฿</p>
 
-        <ion-option-button class="button-assertive" ng-click="rejectDeliver(data)">ปฏิเสธ</ion-option-button>
+        <!--<ion-option-button class="button-assertive" ng-click="rejectDeliver(data)">ปฏิเสธ</ion-option-button>-->
         <ion-option-button class="button-positive" ng-click="acceptDeliver(data)">ยอมรับ</ion-option-button>
       </ion-item>
     </ion-list>
